Fixes issue where Gifferent and Breaking were not visible

--- a/_sass/layouts/_projects.scss
+++ b/_sass/layouts/_projects.scss
@@ -26,6 +26,7 @@
     @extend %project;
     width: 100%;
     font-size: 2em;
+    clear: both;
   }
 
   .big {
